[project]
name = "my-lib"
version = "0.1.0"
description = "Private utility library"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "lxml>=5.3.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "slack-sdk>=3.31.0",
    "uptime>=3.0.1",
    "coloredlogs>=15.0.1",
    "docopt-ng>=0.9.0",
    "pyserial>=3.5",
    "smbus2>=0.4.3",
    "genson>=1.3.0",
    "jsonschema>=4.23.0",
    "line-bot-sdk>=3.14.1",
    "gitpython>=3.1.44",
    "pytz>=2025.2",
    "influxdb-client[ciso]>=1.44.0",
    "rich>=14.0.0",
    "sseclient>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_lib"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = [
    "amazon-paapi5>=1.1.2",
    "flaky>=3.8.1",
    "flask-cors>=4.0.1",
    "flask>=3.0.3",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "playwright>=1.45.1",
    "pytest-cov>=5.0.0",
    "pytest-freezegun>=0.4.2",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.5.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "rpi-lgpio>=0.6",
    "selenium>=4.23.1",
    "spidev>=3.6",
    "speechrecognition>=3.11.0",
    "pydub>=0.25.1",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
minversion = "6.0"

# addopts = "--verbose --log-cli-level=DEBUG --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys  --html=tests/evidence/index.htm --self-contained-html --cov=src --cov-report=html -vv"

addopts = "--verbose --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys  --html=tests/evidence/index.htm --self-contained-html --cov=src --cov-report=html -vv"


testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_configure_node uses",
    "ignore:The hookimpl CovPlugin.pytest_testnodedown uses",
    "ignore::DeprecationWarning:pytest_freezegun",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下、未使用関数
  # webapp/log.py
  "if sqlite is not None:",
]

[tool.coverage.html]
directory = "tests/evidence/coverage"
