[project]
name = "my-lib"
version = "0.2.0"
description = "Private utility library"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]

readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "lxml>=5.3.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "slack-sdk>=3.31.0",
    "uptime>=3.0.1",
    "coloredlogs>=15.0.1",
    "docopt-ng>=0.9.0",
    "pyserial>=3.5",
    "smbus2>=0.4.3",
    "genson>=1.3.0",
    "jsonschema>=4.23.0",
    "line-bot-sdk>=3.14.1",
    "gitpython>=3.1.44",
    "pytz>=2025.2",
    "influxdb-client[ciso]>=1.44.0",
    "rich>=14.0.0",
    "sseclient>=0.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "amazon-paapi5>=1.1.2",
    "flaky>=3.8.1",
    "flask-cors>=4.0.1",
    "flask>=3.0.3",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "playwright>=1.45.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.5.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "rpi-lgpio>=0.6",
    "selenium>=4.23.1",
    "spidev>=3.6",
    "speechrecognition>=3.11.0",
    "pydub>=0.25.1",
    "pytest-timeout>=2.4.0",
    "pytest-forked>=1.6.0",
    "pytest-rerunfailures>=15.1",
    "undetected-chromedriver>=3.5.5",
    "types-requests>=2.32.4.20250913",
    "types-pyyaml>=6.0.12.20250915",
    "types-pytz>=2025.2.0.20251108",
]

[tool.uv]
default-groups = ["dev"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_lib"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --timeout=120 --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --html=tests/evidence/index.htm --self-contained-html --cov=src --cov-report=html"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing\\.popen_fork",
    "ignore:distutils Version classes are deprecated:DeprecationWarning:undetected_chromedriver",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下、未使用関数
  # webapp/log.py
  "if sqlite is not None:",
]

[tool.coverage.html]
directory = "tests/evidence/coverage"

[tool.rye]
dev-dependencies = [
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = true
no_implicit_optional = true



